# VLMaxxing

./: .editorconfig  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-docs  Makefile  PLAN.md  README.md  pyproject.toml  whitepaper.md
docs/: README.md  application-taxonomy.md  benchmark-setup.md  benchmark-taxonomy.md  chatgpt-review-packet.md  claim-register.md  clip-policy.md  execution-plan-round-7.md  external-feedback-validation.md  fastv-composition-plan.md  knowledge-base-notes.md  literature-map-2026-04-16.md  literature-map.md  local-setup.md  onevision-encoder-research-2026-05-08.md  original-repo-audit.md  related-work-table.md  reproduction-status.md  research-dashboard-2026-04-20.md  research-progress-2026-04-14.md  research-strategy-post-codecsight.md  videomme-download-handoff.md
paper/: AGENTS.md  README.md  abstract.md  claim-matrix.md  framing.md  intro.md  narrative-rules.md  priority.md  publishability-status.md  terminology.md
plan/: onevision-vlmaxxing.md
research/: README.md  decision-log.md  falsified-hypotheses.md
scripts/: _test_swa_v2_smoke.py  aggregate_grid_partial.py  analyze_halo_dev_grid.py  analyze_ov3_ground_truth.py  analyze_ov3_statistics.py  analyze_ov6_qwen_random_multiseed.py  analyze_ov6_sidecar_equivalence.py  analyze_ov6_tomato_motion.py  analyze_ov6_track_b.py  analyze_phase1_30_admission_frontier.py  analyze_phase1_30_cache_boundary_attribution.py  analyze_phase1_30_rootcause.py  analyze_phase1_30_sam_streaming_pair.py  analyze_phase1_30_scaleout_streaming_pair.py  analyze_phase1_51V_expansion.py  analyze_phase1_51V_pair.py  analyze_phase1_55f_stage_timing.py  analyze_phase1_58_bf16_control.py  analyze_phase1_62_lowfps_dense.py  analyze_phase1_63_track_b_sparse.py  analyze_phase1_63g_format_diagnostic.py  analyze_phase1_65_richer_predictor.py  analyze_phase1_66_memory_characterization.py  analyze_selective_reprefill_pairs.py  analyze_track_b_arm_set.py  apply_mlx_vlm_swa_patch.sh  audit_artifact_integrity.py  build_c_persist_setup_inclusive.py  build_competitor_positioning_table.py  build_onevision_cpersist_session_accounting.py  build_onevision_vlmaxxing_comparison_table.py  build_ov3_dev_comparison.py  build_ov6_codec_score_sidecars.py  build_ov6_smoke_comparison.py  build_ov6_sweep_summary.py  build_per_item_drift_summary.py  build_phase1_60_scroll_pan_candidates.py  build_videomme_manifest.py  check_generated_paper_diff.py  check_model_configs.py  (+168 more)
tests/: _mlx_probe.py  test_answers.py  test_artifact_source_paths.py  test_arxiv_bundle_manifest.py  test_child_veto.py  test_feature_cache.py  test_feature_change_oracle.py  test_ffmpeg_helpers.py  test_gemma_pruned_vision_tower_codec.py  test_memory_guard.py  test_neighbor_halo_veto.py  test_novelty_pruning.py  (+33 more)
(+1854 files in other folders)
