[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codec-through"
version = "0.1.0"
description = "Research scaffolding for codec-guided video VLM acceleration."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary / research-in-progress" }
authors = [
  { name = "Jean-Francois Bastien" },
]
dependencies = [
  "numpy>=2.2.4",
  "pillow>=11.2.1",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.7",
]
seed = [
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
]
research = [
  "av>=14.4.0",
  "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codec_through"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["seed/chatgpt", "seed/original_repo"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
