[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codec-through"
version = "0.1.0"
description = "Research code for training-free anti-recomputation in video VLMs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Jean-Francois Bastien" },
]
dependencies = [
  "numpy>=2.2.4",
  "pillow>=11.2.1",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "ruff>=0.11.7",
]
paper = [
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pandas>=2.2.3",
  "pillow>=11.2.1",
]
research = [
  "av>=14.4.0",
  "httpx>=0.28.1",
]
vlm = [
  "mlx>=0.31.1",
  "mlx-vlm>=0.4.4",
  "torch",
  "torchvision",
]
benchmark = [
  "datasets>=4.8.4",
  "gdown>=5.2.0",
  "huggingface_hub>=1.10.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codec_through"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "SIM",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["mlx", "mlx.*", "mlx_lm", "mlx_lm.*", "mlx_vlm", "mlx_vlm.*", "av"]
ignore_missing_imports = true
